# Framy

./: .gitignore  CMakeLists.txt  FrameUpdater.py  Handler.py  ImageConverter.py  README.md  bluetooth_agent.py  boot_config.txt  check_fs.py  check_fs_framy.py  check_fs_wifi.py  dither.cpp  framy.service  hostname.service  install.py  install.sh  main.conf  samba_config.txt
dithering/: dither.cpp  dither.h
waveshare_epd/: epd1in02.py  epd1in54.py  epd1in54_V2.py  epd1in54b.py  epd1in54b_V2.py  epd1in54c.py  epd1in64g.py  epd2in13.py  epd2in13_V2.py  epd2in13_V3.py  epd2in13b_V3.py  epd2in13bc.py  epd2in13d.py  epd2in13g.py  epd2in36g.py  epd2in66.py  epd2in66b.py  epd2in7.py  epd2in7_V2.py  epd2in7b.py  epd2in7b_V2.py  epd2in9.py  epd2in9_V2.py  epd2in9b_V3.py  epd2in9bc.py  epd2in9d.py  epd3in0g.py  epd3in52.py  epd3in7.py  epd4in01f.py  epd4in2.py  epd4in2b_V2.py  epd4in2bc.py  epd4in37g.py  epd5in65f.py  epd5in83.py  epd5in83_V2.py  epd5in83b_V2.py  epd5in83bc.py  epd7in3f.py  (+9 more)
